Update model codes

--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,223 @@
     "from sklearn.model_selection import train_test_split\n",
     "from keras.preprocessing.text import text_to_word_sequence\n",
     "from utils import plotGraph,plotLengthHistogram,plotHist,labelPlot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Input,Dense, LSTM,TimeDistributed, Flatten, Reshape\n",
+    "from keras.models import Model\n",
+    "import keras.backend as K\n",
+    "from keras.preprocessing import sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Define parameters\n",
+    "timeSlice = 2\n",
+    "questionLen = 25\n",
+    "wordEmbeddDim = 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'input_2:0' shape=(?, 2, 25, 300) dtype=float32>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'lstm_1_10/Reshape_1:0' shape=(?, 2, 500) dtype=float32>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lstm1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'flatten_4/Reshape:0' shape=(?, ?) dtype=float32>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flatten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'flatten_3/Reshape:0' shape=(?, ?) dtype=float32>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flatten2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'dense_1/BiasAdd:0' shape=(?, 1) dtype=float32>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_16 (InputLayer)        (None, 2, 25, 300)        0         \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (TimeDistributed)     (None, 2, 500)            1602000   \n",
+      "_________________________________________________________________\n",
+      "flatten_9 (Flatten)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 1)                 1001      \n",
+      "=================================================================\n",
+      "Total params: 1,603,001\n",
+      "Trainable params: 1,603,001\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Input,Dense, LSTM,TimeDistributed, Flatten, Reshape\n",
+    "from keras.models import Model\n",
+    "import keras.backend as K\n",
+    "from keras.preprocessing import sequence\n",
+    "\n",
+    "class QuoraModel:\n",
+    "    \n",
+    "    def __init__(self, timeSlice = 2, questionLen = 25, wordEmbeddDim = 300 ):\n",
+    "        self._timeSlice = timeSlice\n",
+    "        self._questionlen = questionLen\n",
+    "        self._wordEmbeddDim = wordEmbeddDim\n",
+    "        self.getModel()\n",
+    "        return self.model\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def getModel(self):\n",
+    "        layer1Dim = 500\n",
+    "        inputs = Input(shape=(timeSlice,questionLen, wordEmbeddDim))\n",
+    "        lstm1 = TimeDistributed(LSTM(layer1Dim, return_sequences = False), name = 'lstm_1')(inputs)\n",
+    "        flatten = Flatten()(lstm1)\n",
+    "        output = Dense(1)(flatten)\n",
+    "        self.model = Model(inputs = inputs, outputs = output)\n",
+    "#         return self.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() should return None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-13aaf83d301a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# This returns a tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQuoraModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m model.compile(optimizer='adagrad',\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() should return None"
+     ]
+    }
+   ],
+   "source": [
+    "# This returns a tensor\n",
+    "\n",
+    "model = QuoraModel()\n",
+    "\n",
+    "model.compile(optimizer='adagrad',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model.fit(data, labels)  # starts training"
    ]
   },
   {
