--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -345,9 +345,10 @@
     "bestLoss = 100\n",
     "weightFilePath = \"./1234\"\n",
     "nIter = dataGenerator.nTrainData/(batchSize)\n",
-    "# trainX, trainY = dataGenerator.getTrainBatch()\n",
+    
     "for i in range(nEpochs):\n",
     "    for j in range(nIter):\n",
+    "        trainX, trainY = dataGenerator.getTrainBatch()\n",
     "        model.fit( trainX, trainY, verbose = False )\n",
     "        if( j%iterSize == 0 ):\n",
     "            trainX, trainY = dataGenerator.getTrainBatch(batchSize = 5*batchSize)\n",
